Sun Oct 11 07:09:19 2015  Koichi Sasada  <ko1@atdot.net>

	* vm_insnhelper.c (vm_push_frame): initialize other than sp (and ep)
	  first for performance.

Sun Oct 11 06:21:50 2015  Koichi Sasada  <ko1@atdot.net>

	* vm_eval.c, internal.h (rb_yield_1): added for performance which
	  doesn't check Qundef.

	* numeric.c (int_dotimes): use rb_yield_1.

Sun Oct 11 06:19:49 2015  Koichi Sasada  <ko1@atdot.net>

	* vm_insnhelper.c (vm_call_iseq_setup_normal): setup sp first
	  for performance.

Sun Oct 11 05:29:51 2015  Koichi Sasada  <ko1@atdot.net>

	* vm.c (invoke_block_from_c): split this function into several
	  functions.

	* vm_insnhelper.c (vm_yield_callee_setup_arg): remove this function
	  beacuse it is only delegation function.

Sun Oct 11 03:48:46 2015  Koichi Sasada  <ko1@atdot.net>

	* gc.c (newobj_of_slowpass): fix typo (pass -> path).
	  Pointed out by Yukihiro Matsumoto  <matz@ruby-lang.org>.

	* gc.c (newobj_of_...): `of' is unnecessary.

Sat Oct 10 19:04:42 2015  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* ext/socket/udpsocket.c (udp_connect, udp_bind): get open files
	  inside ensure functions.

Sat Oct 10 18:35:12 2015  Koichi Sasada  <ko1@atdot.net>

	* vm_insnhelper.c (vm_call_method0): do not propagate enable_fastpath,
	  but pass dummy CC to prevent wrong caching.

Sat Oct 10 15:28:45 2015  Koichi Sasada  <ko1@atdot.net>

	* import a github pull request
	  https://github.com/ruby/ruby/pull/1050
	  by Kazuho Oku <kazuho@natadeco.co>.

	  This pull request has the following commits.

	* gc.c: reduce # of args to 6 (max. of register args on x86-64) so
	  that the `newobj_of_slowpass` can be called via TCO.

	* gc.c (newobj_of), string.c (str_duplicate): for performance,
	  the hot functions must be inlined.

	* gc.c: for performance, preceding arguments of `.*newobj_of.*`
	  must be same, so that the arg registers can be reused in case of
	  TCO.

Sat Oct 10 08:52:21 2015  Nobuyoshi Nakada  <nobu@ruby-lang.org>
