@@ -50,8 +50,9 @@ tcp_sockaddr(struct sockaddr *addr, socklen_t len)
 static VALUE
 tcp_s_gethostbyname(VALUE obj, VALUE host)
 {
-    return rsock_make_hostent(host, rsock_addrinfo(host, Qnil, SOCK_STREAM, AI_CANONNAME),
-			tcp_sockaddr);
+    struct rb_addrinfo *res =
+	rsock_addrinfo(host, Qnil, AF_UNSPEC, SOCK_STREAM, AI_CANONNAME);
+    return rsock_make_hostent(host, res, tcp_sockaddr);
 }
 
 void
