@@ -1,3 +1,11 @@
+Tue Oct 13 12:14:10 2015  Craig Davison  <craig65535@gmail.com>
+
+	* ext/socket/rsock_addrinfo (rsock_addrinfo): specify address
+	  family.  [Fix GH-1052]
+
+	* ext/socket/udpsocket.c (udp_connect, udp_bind, udp_send):
+	  address family by the receiver.
+
 Sun Oct 11 07:09:19 2015  Koichi Sasada  <ko1@atdot.net>
 
 	* vm_insnhelper.c (vm_push_frame): initialize other than sp (and ep)
